<resources>
    <string name="app_name">Songbird</string>

    <string name="txt_welcome">Welcome to Songbird!</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>

    <string name="txt_createAcct">Please create an account below.</string>
    <string name="txt_login">Please enter your details.</string>
    <string name="txt_placeholder">Loading…</string>

    <string name="txt_dobFormat">%1$d/%2$d/%3$d</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_unfollow">Unfollow</string>

    <string name="txt_ageError">ERROR: You must be at least 13 years old to create an account.</string>
    <string name="txt_passwordError">ERROR: Passwords do not match.</string>
    <string name="txt_filloutError">ERROR: Not all fields have been filled out.</string>

    <string name="txt_emailPrompt">Email</string>
    <string name="txt_usernamePrompt">Username</string>
    <string name="txt_passwordPrompt">Password</string>
    <string name="txt_passwordRetypePrompt">Retype Password</string>
    <string name="txt_dobPrompt">Date of birth:</string>
    <string name="txt_genderPrompt">Gender</string>
    <string name="txt_submit">Submit</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_likes">Likes</string>

    <string name="txt_postPrompt">Write your post here</string>
    <string name="btn_post">Post</string>
    <string name="toast_noContentError">ERROR: No content to post!</string>
    <string name="btn_addImage">Add image</string>
    <string name="btn_reply">Reply</string>
    <string name="txt_replies">Replies:</string>

    <string name="alert_filePermissions">In order to continue with this action, we need the ability to read your files. Continue?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>

    <string name="img_heart">Like</string>
</resources>