<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_createAcct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_createAcct"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ageError"
            android:textColor="@color/colorError"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/txt_usernamePrompt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/txt_emailPrompt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/txt_passwordPrompt"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_passwordRetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/txt_passwordRetypePrompt"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/txt_dobPrompt"
            android:inputType="none" />

        <EditText
            android:id="@+id/edit_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/txt_genderPrompt"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_submit" />

    </LinearLayout>

</ScrollView>